Add current map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name">Assistant</string>
+    <string name="app_name">Daily Assi</string>
     <string name="home">Home</string>
     <string name="heart">Heart Rate</string>
     <string name="airpolution">Airpolution</string>
